tests/ui/consts/const-len-underflow-separate-spans.next.stderr
error[E0080]: attempt to compute `1_usize - 2_usize`, which would overflow
  --> $DIR/const-len-underflow-separate-spans.rs:10:20
   |
LL | const LEN: usize = ONE - TWO;
   |                    ^^^^^^^^^ evaluation of constant value failed here

note: erroneous constant encountered
  --> $DIR/const-len-underflow-separate-spans.rs:15:17
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
